--- a/Portfolio Website/styles.css
+++ b/Portfolio Website/styles.css
@@ -227,6 +227,7 @@ nav ul {
   left: 12.5%;
   width: 50%;
   overflow-y: hidden;
+  overflow-x : hidden ;
   -webkit-transition: 1s cubic-bezier(0.68, -0.55, 0.27, 10.55);
   transition: 1s cubic-bezier(0.68, -0.55, 0.27, 10.55);
 }
