--- a/Portfolio Website/styles.css
+++ b/Portfolio Website/styles.css
@@ -18,7 +18,7 @@ p {
 
 /*Styling for Custom Scrollbar*/
 ::-webkit-scrollbar {
-  width: 10px;
+  width: 8px;
 }
 
 ::-webkit-scrollbar-track {
@@ -122,9 +122,19 @@ nav {
   width: 100%;
   padding: 1em;
   background-color: rgba(138, 138, 138, 0.123);
-  -webkit-backdrop-filter: blur(5px);
-          backdrop-filter: blur(5px);
   z-index: 10;
+}
+
+nav:before {
+  content: "";
+  position: absolute;
+  z-index: -1;
+  -webkit-backdrop-filter: blur(10px);
+          backdrop-filter: blur(10px);
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
 }
 
 #logo {
@@ -162,7 +172,7 @@ nav {
 
 #name {
   position: fixed;
-  top: 50%;
+  top: 6%;
   -webkit-animation-name: text-slide;
           animation-name: text-slide;
   -webkit-animation-duration: 1.2s;
@@ -224,10 +234,10 @@ nav ul {
       -ms-flex-align: center;
           align-items: center;
   position: relative;
-  left: 12.5%;
+  left: 10%;
   width: 50%;
+  overflow-x: hidden;
   overflow-y: hidden;
-  overflow-x : hidden ;
   -webkit-transition: 1s cubic-bezier(0.68, -0.55, 0.27, 10.55);
   transition: 1s cubic-bezier(0.68, -0.55, 0.27, 10.55);
 }
@@ -278,8 +288,8 @@ nav .menu {
 
 nav .menu span {
   background: #3c3c3c;
-  -webkit-transition: 0.3s ease;
-  transition: 0.3s ease;
+  -webkit-transition: 0.5s ease;
+  transition: 0.5s ease;
   -webkit-transform-origin: left;
           transform-origin: left;
 }
@@ -1044,7 +1054,7 @@ other classes overiding the dark mode declarations due to specificity*/
   background: #1e1e1e;
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 900px) {
   p {
     font-size: 0.8em;
     text-align: center;
@@ -1076,9 +1086,6 @@ other classes overiding the dark mode declarations due to specificity*/
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
             flex-direction: column;
-    background-color: rgba(138, 138, 138, 0.123);
-    -webkit-backdrop-filter: blur(10px);
-            backdrop-filter: blur(10px);
     position: absolute;
     width: 100%;
     left: 0;
@@ -1086,13 +1093,17 @@ other classes overiding the dark mode declarations due to specificity*/
     height: var(--height);
     -webkit-transition: 1s cubic-bezier(0.68, -0.55, 0.27, 1.55);
     transition: 1s cubic-bezier(0.68, -0.55, 0.27, 1.55);
+    z-index: 2;
   }
   nav ul.active {
     --height: calc(
-          (((var(--padding) * 2) + ( 15px * 1.5))) * var(--childenNumber)
+          (((var(--padding) * 2) + (15px * 1.5))) * var(--childenNumber)
         );
-    -webkit-transition: 1s cubic-bezier(0.68, -0.55, 0.27, 1.55);
-    transition: 1s cubic-bezier(0.68, -0.55, 0.27, 1.55);
+    background-color: rgba(138, 138, 138, 0.123);
+    -webkit-backdrop-filter: blur(10px);
+            backdrop-filter: blur(10px);
+    -webkit-transition: 0.8s cubic-bezier(0.68, -0.55, 0.27, 1.55);
+    transition: 0.8s cubic-bezier(0.68, -0.55, 0.27, 1.55);
   }
   nav ul li {
     width: 100%;
