--- a/Portfolio Website/styles.scss
+++ b/Portfolio Website/styles.scss
@@ -28,7 +28,7 @@ p{
 
 /*Styling for Custom Scrollbar*/
 ::-webkit-scrollbar {
-    width: 10px;
+    width: 8px;
   }
   
 ::-webkit-scrollbar-track {
@@ -127,9 +127,20 @@ nav
     width: 100%;
     padding: 1em;
     background-color: $glass;
-    backdrop-filter: blur(5px);
+    
     z-index: 10;
 }
+
+nav:before {
+    content:"";
+    position:absolute;
+    z-index:-1;
+    backdrop-filter: blur(10px);
+    top:0;
+    left:0;
+    right:0;
+    bottom:0;
+  }
 
 #logo
 {
@@ -157,7 +168,7 @@ nav
 #name
 {
     position: fixed;
-    top:50%;
+    top:6%;
     animation-name: text-slide;
     animation-duration: 1.2s;
     animation-iteration-count: infinite;
@@ -201,10 +212,10 @@ nav ul {
   display: flex;
   align-items: center;
   position: relative;
-  left: 12.5%;
+  left: 10%;
   width: 50%;
+  overflow-x: hidden;
   overflow-y: hidden;
-  overflow-x : hidden ;
   transition: 1s cubic-bezier(.68,-0.55,.27,10.55);
 }
 
@@ -252,7 +263,7 @@ nav .menu {
 
 nav .menu span {
   background: $base-dark;
-  transition: 0.3s ease;
+  transition: 0.5s ease;
   transform-origin: left;
 }
 
@@ -930,7 +941,7 @@ other classes overiding the dark mode declarations due to specificity*/
     color: white;
     background: $darkest;
 }
-@media screen and(max-width : 768px)
+@media screen and(max-width : 900px)
 {
     p
     {
@@ -964,20 +975,21 @@ other classes overiding the dark mode declarations due to specificity*/
         --height: 0px;
     
         flex-direction: column;
-        background-color: $glass;
-        backdrop-filter: blur(10px);
         position: absolute;
         width: 100%;
         left: 0;
         top: 100%;
         height: var(--height);
         transition: 1s cubic-bezier(.68,-0.55,.27,1.55);
+        z-index: 2;
       }
       nav ul.active {
         --height: calc(
           (((var(--padding) * 2) + (15px * 1.5))) * var(--childenNumber)
         );
-        transition: 1s cubic-bezier(.68,-0.55,.27,1.55);
+        background-color: $glass;
+        backdrop-filter: blur(10px);
+        transition: 0.8s cubic-bezier(.68,-0.55,.27,1.55);
 
       }
     
