--- a/Portfolio Website/styles.scss
+++ b/Portfolio Website/styles.scss
@@ -1,6 +1,7 @@
 //color variables
 $base-light: rgb(245,245,245);
-$lighter: rgb(240,240,240);
+$light : rgb(190,190,190);
+$lighter : rgb(240,240,240);
 $lightest: white;
 $base-dark: rgb(60,60,60);
 $darker: rgb(40,40,40);
@@ -14,7 +15,7 @@ $glass: rgba(138, 138, 138, 0.123);
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-
+  overflow-x: hidden;
 }
 
 :root {
@@ -24,6 +25,7 @@ $glass: rgba(138, 138, 138, 0.123);
 
 p{
     font-size: 15px;
+    font-weight: 300;
 }
 
 /*Styling for Custom Scrollbar*/
@@ -76,16 +78,17 @@ html{
 }
 body
 {
-    background: $lightest;
-    font-family: 'Sora','sans-serif';
+    font-family: 'sora','sans-serif';
     padding: 0;
     margin: 0;
+    background-color: $base-light;
 }
 .bg-text 
 {
     display: block;
     position: absolute;
     color: $base-light;
+    font-size: 120px;
     top: 0;
     right: 0;
     opacity: 0;
@@ -93,8 +96,8 @@ body
 }
 .skill-tile:hover .bg-text
 {
-    font-size: 80px;
-    opacity: 0.4;
+    
+    opacity: 0.5;
     transition: 0.8s;
 }
 
@@ -156,12 +159,7 @@ nav:before {
     font-size: 14px;
 }
 
-#names
-{
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
-}
+
 
 #name
 {
@@ -170,6 +168,7 @@ nav:before {
     animation-name: text-slide;
     animation-duration: 1.2s;
     animation-iteration-count: infinite;
+    font-weight: 500;
 }
 
 /*Logo Animation*/
@@ -228,7 +227,7 @@ nav ul li a
   width: 100%;
   text-transform: uppercase;
   color: $x-dark;
-  font-weight: 500;
+  font-weight: 400;
   
 }
 
@@ -483,6 +482,7 @@ section
 h1
 {
     font-size: 40px;
+    font-weight: 500;
     width: 100%;
 
 }
@@ -490,6 +490,7 @@ h1
 /*Styling for about section*/
 .about
 {
+    position: relative;
     background-color: $base-light;
     display: flex;
     flex-direction: row;
@@ -504,6 +505,7 @@ h1
     width: 50%;
     margin-left: 2em;
     align-self: flex-start;
+    overflow-y: hidden;
     z-index: 3;
 }
 .arrow
@@ -549,6 +551,10 @@ h1
 {
     padding: 0.5em;
 }
+.skill-tile
+{
+    overflow-y: hidden;
+}
 .skill-tile:hover
 {
     transform: scale(1.1);
@@ -557,23 +563,28 @@ h1
 }
 .skill1
 {
+    position: relative;
     background-color: rgb(204, 204, 204);
     grid-area: 1 / 1 / 5 / 3;
 }
 .skill2
 {
+    position: relative;
     background-color: rgb(156, 156, 156);
     grid-area: 1 / 3 / 3 / 5;
 }
 
 .skill3
 {
+    position: relative;
     background-color: rgb(226, 226, 226);
     grid-area: 3 / 3 / 5 / 4;
 }
 
 .skill4
 {
+    position: relative;
+    overflow-y: hidden;
     background-color: rgb(199, 199, 199);
     grid-area: 3 / 4 / 5 / 5;
 }
@@ -599,6 +610,7 @@ h1
     display: flex;
     flex-direction: column;
     width: 100%;
+    overflow: hidden hidden;
 }
 
 .project-case, .odd
@@ -727,8 +739,10 @@ video::-webkit-media-controls
     padding: 2em;
 }
 
+
 .inner-title
 {
+    padding: 1em;
     font-size: 36px;
     font-weight: 600;
 }
@@ -759,7 +773,10 @@ video::-webkit-media-controls
     width: 40%;
     padding: 1.5em;
 }
-
+#contact-title
+{
+    padding: 0;
+}
 #contact-text
 {
     text-align: center;
@@ -805,6 +822,8 @@ footer
   bottom: 10%;
   text-decoration: none;
   background: $base-light;
+  overflow-y: hidden;
+  overflow-x: hidden;
   border-radius: 50%;
   z-index: 4;
   height: 45px;
@@ -850,6 +869,11 @@ footer
 /*Dark Mode Classes' Definition*/
 /*WARNING : Leave this section at the bottom of the stylesheet (except media queries) at all times to avoid
 other classes overiding the dark mode declarations due to specificity*/
+
+.body-dark
+{
+    background-color: $x-dark;
+}
 .link-dark
 {
     color: $lightest;
@@ -941,6 +965,11 @@ other classes overiding the dark mode declarations due to specificity*/
 }
 @media screen and(max-width : 900px)
 {
+    *,
+    *::after,
+    *::before {
+    overflow-x: unset;
+    }
     p
     {
         font-size: 0.8em;
@@ -1021,7 +1050,6 @@ other classes overiding the dark mode declarations due to specificity*/
     {
         font-size: 1.8em;
         text-align: center;
-        padding: 1em;
     }
     #about
     {
