--- a/Portfolio Website/styles.css
+++ b/Portfolio Website/styles.css
@@ -606,13 +606,6 @@ h1 {
   overflow-y: hidden;
 }
 
-.skill-tile:hover {
-  -webkit-transform: scale(1.1);
-          transform: scale(1.1);
-  -webkit-transition: 0.5s;
-  transition: 0.5s;
-}
-
 .skill1 {
   position: relative;
   background-color: #cccccc;
@@ -740,6 +733,10 @@ h1 {
   -webkit-box-shadow: rgba(100, 100, 111, 0.2) 0 7px 29px 0;
           box-shadow: rgba(100, 100, 111, 0.2) 0 7px 29px 0;
   z-index: 1;
+}
+
+h4 i {
+  padding: inherit;
 }
 
 .proj-demo {
@@ -1041,8 +1038,8 @@ other classes overiding the dark mode declarations due to specificity*/
 
 .project-tile-dark {
   background-color: #282828;
-  -webkit-box-shadow: rgba(37, 37, 37, 0.2) 0 7px 29px 0;
-          box-shadow: rgba(37, 37, 37, 0.2) 0 7px 29px 0;
+  -webkit-box-shadow: 0px 24px 38px 3px rgba(0, 0, 0, 0.14), 0px 9px 46px 8px rgba(0, 0, 0, 0.12), 0px 11px 15px -7px rgba(0, 0, 0, 0.2);
+          box-shadow: 0px 24px 38px 3px rgba(0, 0, 0, 0.14), 0px 9px 46px 8px rgba(0, 0, 0, 0.12), 0px 11px 15px -7px rgba(0, 0, 0, 0.2);
   color: white;
 }
 
@@ -1073,6 +1070,9 @@ other classes overiding the dark mode declarations due to specificity*/
   *::before {
     overflow-x: unset;
   }
+  .bg-text {
+    font-size: 60px;
+  }
   p {
     font-size: 0.8em;
     text-align: center;
@@ -1085,9 +1085,6 @@ other classes overiding the dark mode declarations due to specificity*/
     position: relative;
     top: 0px;
     margin-bottom: 0px;
-  }
-  .skill-tile:hover .bg-text {
-    font-size: 60px;
   }
   .fa-brands {
     font-size: 1.5em;
@@ -1184,6 +1181,9 @@ other classes overiding the dark mode declarations due to specificity*/
   }
   .skill-type {
     margin: 0;
+  }
+  .skill-tile {
+    overflow-x: hidden;
   }
   .arrow {
     display: none;
