--- a/Portfolio Website/styles.scss
+++ b/Portfolio Website/styles.scss
@@ -555,12 +555,6 @@ h1
 {
     overflow-y: hidden;
 }
-.skill-tile:hover
-{
-    transform: scale(1.1);
-    transition: 0.5s;
-
-}
 .skill1
 {
     position: relative;
@@ -650,6 +644,10 @@ h1
     z-index: 1;
 }
 
+h4 i
+{
+    padding: inherit;
+}
 .proj-demo
 {
     width: 100%;
@@ -937,7 +935,10 @@ other classes overiding the dark mode declarations due to specificity*/
 .project-tile-dark
 {
     background-color: $darker;
-    box-shadow: rgba(37, 37, 37, 0.2) 0 7px 29px 0;
+    box-shadow:
+		0px 24px 38px 3px hsla(0,0%,0%,0.14), 
+		0px 9px 46px 8px hsla(0,0%,0%,0.12), 
+		0px 11px 15px -7px hsla(0,0%,0%,0.2);
     color: white;
 }
 .proj-link-dark
@@ -970,6 +971,11 @@ other classes overiding the dark mode declarations due to specificity*/
     *::before {
     overflow-x: unset;
     }
+
+    .bg-text
+    {
+        font-size: 60px;
+    }
     p
     {
         font-size: 0.8em;
@@ -984,10 +990,6 @@ other classes overiding the dark mode declarations due to specificity*/
         position: relative;
         top: 0px;
         margin-bottom: 0px;
-    }
-    .skill-tile:hover .bg-text
-    {
-        font-size: 60px;
     }
     .fa-brands
     {
@@ -1082,6 +1084,11 @@ other classes overiding the dark mode declarations due to specificity*/
     .skill-type
     {
         margin: 0;
+    }
+
+    .skill-tile
+    {
+        overflow-x: hidden;
     }
     .arrow
     {
