--- a/Portfolio Website/styles.css
+++ b/Portfolio Website/styles.css
@@ -160,7 +160,7 @@ nav:before {
 
 #name {
   position: fixed;
-  top: 6%;
+  top: 45px;
   -webkit-animation-name: text-slide;
           animation-name: text-slide;
   -webkit-animation-duration: 1.2s;
@@ -650,6 +650,7 @@ h1 {
 .skill-type {
   font-weight: 500;
   margin: 0.5em;
+  text-transform: uppercase;
 }
 
 /*Styling for projects sections*/
@@ -714,6 +715,15 @@ h1 {
 
 .project-info {
   text-align: left;
+}
+
+.built-with {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 .project-tile {
@@ -803,16 +813,7 @@ video::-webkit-media-controls {
 .project-link {
   color: #3c3c3c;
   font-size: 10px;
-}
-
-.left-link {
-  border: 1px solid #3c3c3c;
-  border-right: none;
-}
-
-.right-link {
-  border: 1px solid #3c3c3c;
-  border-left: none;
+  text-transform: uppercase;
 }
 
 /*Styling for upto section*/
@@ -906,7 +907,6 @@ footer {
 
 .footer-box {
   position: relative;
-  left: 5%;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -914,16 +914,32 @@ footer {
   -webkit-box-direction: normal;
       -ms-flex-direction: row;
           flex-direction: row;
-  -webkit-box-pack: start;
-      -ms-flex-pack: start;
-          justify-content: flex-start;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  width: 80%;
+  width: 100%;
   padding: 2em;
   padding-left: 0;
   padding-right: 0;
+}
+
+#footer-text {
+  text-align: left;
+  width: 40%;
+}
+
+#footer-other {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  width: 40%;
+  overflow: hidden hidden;
 }
 
 #back-to-top {
@@ -1044,7 +1060,6 @@ other classes overiding the dark mode declarations due to specificity*/
 }
 
 .proj-link-dark {
-  border-color: whitesmoke;
   color: #f0f0f0;
 }
 
@@ -1080,14 +1095,19 @@ other classes overiding the dark mode declarations due to specificity*/
     padding-bottom: 1em;
   }
   .svg-icon {
-    width: 2em;
-    height: 2em;
+    width: inherit;
+    height: inherit;
     position: relative;
     top: 0px;
-    margin-bottom: 0px;
   }
   .fa-brands {
     font-size: 1.5em;
+  }
+  .fa-sass, .fa-css3 {
+    font-size: 30px;
+  }
+  .fg-text {
+    font-size: 36px;
   }
   nav .menu {
     display: -webkit-box;
@@ -1181,6 +1201,7 @@ other classes overiding the dark mode declarations due to specificity*/
   }
   .skill-type {
     margin: 0;
+    font-size: 0.6em;
   }
   .skill-tile {
     overflow-x: hidden;
@@ -1231,9 +1252,6 @@ other classes overiding the dark mode declarations due to specificity*/
   .footer-text {
     font-size: 0.7em;
     font-weight: bolder;
-  }
-  .footer-box {
-    left: 10%;
   }
 }
 /*# sourceMappingURL=styles.css.map */
