--- a/Portfolio Website/styles.scss
+++ b/Portfolio Website/styles.scss
@@ -164,7 +164,7 @@ nav:before {
 #name
 {
     position: fixed;
-    top:6%;
+    top:45px;
     animation-name: text-slide;
     animation-duration: 1.2s;
     animation-iteration-count: infinite;
@@ -587,6 +587,7 @@ h1
 {
     font-weight: 500;
     margin: 0.5em;
+    text-transform: uppercase;
 }
 
 /*Styling for projects sections*/
@@ -631,7 +632,11 @@ h1
 {
     text-align: left;
 }
-
+.built-with
+{
+    display: flex;
+    align-items: center;
+}
 .project-tile
 {
     width: 40%;
@@ -712,18 +717,9 @@ video::-webkit-media-controls
 {
     color: $base-dark;
     font-size: 10px;
+    text-transform: uppercase;
 }
-.left-link
-{
-    
-    border: 1px solid $base-dark;
-    border-right: none;  
-}
-.right-link
-{
-    border: 1px solid $base-dark;
-    border-left: none;
-}
+
 
 /*Styling for upto section*/
 
@@ -800,17 +796,28 @@ footer
 .footer-box
 {
     position: relative;
-    left: 5%;
     display: flex;
     flex-direction: row;
-    justify-content: flex-start;
+    justify-content: space-around;
     align-items: center;
-    width: 80%;
+    width: 100%;
     padding: 2em;
     padding-left: 0;
     padding-right: 0;
 }
+#footer-text
+{
+    text-align: left;
+    width: 40%;
+}
 
+#footer-other
+{
+    display: flex;
+    flex-direction: column;
+    width: 40%;
+    overflow: hidden hidden;
+}
 
 
 #back-to-top
@@ -943,7 +950,6 @@ other classes overiding the dark mode declarations due to specificity*/
 }
 .proj-link-dark
 {
-    border-color: $base-light;
     color: $lighter;
 }
 
@@ -985,15 +991,23 @@ other classes overiding the dark mode declarations due to specificity*/
     }
     .svg-icon
     {
-        width: 2em;
-        height: 2em;
+        width: inherit;
+        height: inherit;
         position: relative;
         top: 0px;
-        margin-bottom: 0px;
     }
     .fa-brands
     {
         font-size: 1.5em;
+    }
+    
+    .fa-sass, .fa-css3
+    {
+        font-size: 30px;
+    }
+    .fg-text
+    {
+        font-size: 36px;
     }
     nav .menu {
         display: flex;
@@ -1084,6 +1098,7 @@ other classes overiding the dark mode declarations due to specificity*/
     .skill-type
     {
         margin: 0;
+        font-size: 0.6em;
     }
 
     .skill-tile
@@ -1150,8 +1165,4 @@ other classes overiding the dark mode declarations due to specificity*/
         font-weight: bolder;
     }
 
-    .footer-box
-    {
-        left: 10%;
-    }
 }
