--- a/Portfolio Website/styles.scss
+++ b/Portfolio Website/styles.scss
@@ -18,10 +18,6 @@ $glass: rgba(138, 138, 138, 0.123);
   overflow-x: hidden;
 }
 
-:root {
-  --main-clr: rgb(124, 124, 124);
-  --nav-shadow: 0px 3px var(--main-clr);
-}
 
 p{
     font-size: 15px;
@@ -231,22 +227,6 @@ nav ul li a
   
 }
 
-/*nav ul li a::after {
-  content: "";
-  width: 0%;
-  height: 1.7px;
-  border-radius: 99px;
-  background: var(--main-clr);
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  transition: 0.3s ease;
-}
-
-nav ul li a:hover::after {
-  width: 100%;
-}*/
-
 nav .menu {
   width: 22px;
   height: 16px;
@@ -440,7 +420,7 @@ section
 {
     height: 100vh;
     width: 100%;
-    background-image: url(https://www.superiorwallpapers.com/images/lthumbs/2019-12/12984_White-nature-and-one-single-tree-HD-wallpaper.jpg);
+    background-image: url(images/whitebanner.jpg);
     background-size: cover;
     display: flex;
     align-items: center;
@@ -460,7 +440,7 @@ section
 .hire-btn
 {
     background-color: black;
-    border: 1px solid white;
+    border: 1px solid $glass;
     padding: 1em;
     color: white ;
     font-size: 15px;
@@ -474,7 +454,7 @@ section
 .hire-btn-dark
 {
     background-color: $lighter;
-    border: 1px solid $x-dark;
+    border: 1px solid $glass;
     color: $x-dark;
     
 }
@@ -859,7 +839,7 @@ footer
   bottom: 5px;
 }
 
-#back-to-top span:hover
+#back-to-top:hover span
 {
   color: rgb(148, 148, 148);
   transition: all 0.4s ease-in-out ;
