--- a/Portfolio Website/styles.css
+++ b/Portfolio Website/styles.css
@@ -8,6 +8,16 @@
   overflow-x: hidden;
 }
 
+::-moz-selection {
+  color: white;
+  background: red;
+}
+
+::selection {
+  color: white;
+  background: red;
+}
+
 p {
   font-size: 15px;
   font-weight: 300;
@@ -445,7 +455,7 @@ input:checked + .slider:before {
 }
 
 /*Styling For Welcome Section/Banner*/
-section {
+.hero {
   height: 100vh;
   width: 100%;
   background-image: url(images/whitebanner.jpg);
@@ -513,29 +523,31 @@ h1 {
       -ms-flex-direction: row;
           flex-direction: row;
   width: 100%;
-  height: 700px;
+  height: 120vh;
+  padding-bottom: 2em;
+  overflow-y: hidden;
 }
 
 #about-text {
   padding: 2em;
+  padding-top: 0;
+  position: relative;
   width: 50%;
-  margin-left: 2em;
+  margin-left: 1em;
   -ms-flex-item-align: start;
       align-self: flex-start;
   overflow-y: hidden;
   z-index: 3;
 }
 
-.arrow {
-  -webkit-transform: rotate(220deg);
-          transform: rotate(220deg);
-  font-size: 12em;
-  position: relative;
-  left: 60%;
-  z-index: 3;
+.about-me {
+  font-weight: 300;
+  padding-left: 2em;
+  padding-bottom: 1em;
 }
 
 #about-skills {
+  position: relative;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -552,6 +564,7 @@ h1 {
   -ms-flex-item-align: end;
       align-self: flex-end;
   width: 50%;
+  height: 100%;
   z-index: 3;
 }
 
@@ -564,7 +577,7 @@ h1 {
 
 #skills {
   width: 90%;
-  height: 250px;
+  height: 70%;
   padding-bottom: 2em;
   position: relative;
   display: -ms-grid;
@@ -610,10 +623,10 @@ h1 {
   position: relative;
   background-color: #e2e2e2;
   -ms-grid-row: 3;
-  -ms-grid-row-span: 2;
+  -ms-grid-row-span: 1;
   -ms-grid-column: 3;
   -ms-grid-column-span: 1;
-  grid-area: 3 / 3 / 5 / 4;
+  grid-area: 3 / 3 / 4 / 4;
 }
 
 .skill4 {
@@ -621,10 +634,20 @@ h1 {
   overflow-y: hidden;
   background-color: #c7c7c7;
   -ms-grid-row: 3;
-  -ms-grid-row-span: 2;
+  -ms-grid-row-span: 1;
   -ms-grid-column: 4;
   -ms-grid-column-span: 1;
-  grid-area: 3 / 4 / 5 / 5;
+  grid-area: 3 / 4 / 4 / 5;
+}
+
+.skill5 {
+  position: relative;
+  background-color: #9c9c9c;
+  -ms-grid-row: 4;
+  -ms-grid-row-span: 1;
+  -ms-grid-column: 3;
+  -ms-grid-column-span: 2;
+  grid-area: 4 / 3 / 5 / 5;
 }
 
 .skill-type {
@@ -828,6 +851,7 @@ video::-webkit-media-controls {
       -ms-flex-align: center;
           align-items: center;
   width: 100%;
+  height: 100vh;
   min-height: 400px;
   padding-bottom: 2em;
   background-image: url(images/whitecard2.jpg);
@@ -850,8 +874,9 @@ video::-webkit-media-controls {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  width: 40%;
-  padding: 1.5em;
+  width: 60%;
+  height: 80%;
+  padding: 1em;
 }
 
 #contact-title {
@@ -975,7 +1000,7 @@ footer {
 /*WARNING : Leave this section at the bottom of the stylesheet (except media queries) at all times to avoid
 other classes overiding the dark mode declarations due to specificity*/
 .body-dark {
-  background-color: #141414;
+  background-color: black;
 }
 
 .link-dark {
@@ -1020,11 +1045,7 @@ other classes overiding the dark mode declarations due to specificity*/
 }
 
 .skill5-dark {
-  background-color: #3c3c3c;
-}
-
-.skill6-dark {
-  background-color: #282828;
+  background-color: #525252;
 }
 
 .project-box-dark {
@@ -1159,11 +1180,15 @@ other classes overiding the dark mode declarations due to specificity*/
   }
   #about-text {
     padding: 1em;
+    top: 0;
     margin-left: 0;
     -ms-flex-item-align: center;
         -ms-grid-row-align: center;
         align-self: center;
     width: 80%;
+  }
+  .about-me {
+    padding-left: 0;
   }
   #about-skills h2 {
     -ms-flex-item-align: center;
@@ -1175,6 +1200,7 @@ other classes overiding the dark mode declarations due to specificity*/
         -ms-grid-row-align: center;
         align-self: center;
     width: 100%;
+    top: 0;
   }
   #skills {
     width: 80%;
