--- a/Portfolio Website/styles.scss
+++ b/Portfolio Website/styles.scss
@@ -21,7 +21,14 @@ $glass: rgba(138, 138, 138, 0.123);
 ::selection
 {
     color: white;
-    background: rgb(255, 0, 0);
+    background: rgb(167, 167, 167);
+}
+
+.faux-top
+{
+    position: absolute;
+    top: -10vh;
+    opacity: 0;
 }
 
 p{
@@ -431,13 +438,14 @@ border-radius: 50%;
     align-items: center;
     justify-content: flex-start;
     text-transform: capitalize;
+    overflow-y: hidden;
 }
 
 #welcome-inner-box
 {
     display: flex;
     flex-direction: column;
-    width: 40%;
+    width: 50%;
     padding: 6em;
     align-items: flex-start;
 }
@@ -525,7 +533,7 @@ h1
 #skills
 {
     width: 90%;
-    height: 70%;
+    height: 60%;
     padding-bottom: 2em;
     position: relative;
     display: grid;
@@ -628,6 +636,7 @@ h1
 }
 .project-info
 {
+    padding-top: 20px;
     text-align: left;
 }
 .built-with
@@ -723,6 +732,7 @@ video::-webkit-media-controls
 
 .upto-box
 {
+    position: relative;
     background-color: $lighter;
     border-top: 1px solid rgb(190, 190, 190);
 }
@@ -742,10 +752,11 @@ video::-webkit-media-controls
 /*Styling for Contact Section*/
 .contact-box
 {
+    position: relative;
     display: flex;
     flex-direction: column;
     background-color: $base-light;
-    justify-content: space-around;
+    justify-content: space-evenly;
     align-items: center;
     width: 100%;
     height: 100vh;
@@ -769,7 +780,7 @@ video::-webkit-media-controls
 }
 #contact-title
 {
-    padding: 0;
+    padding: 1em;
 }
 #contact-text
 {
@@ -1143,6 +1154,10 @@ other classes overiding the dark mode declarations due to specificity*/
         width: 100%;
         bottom: 0;
         padding: 1em;
+    }
+    .project-info
+    {
+        padding-top: 0;
     }
     #contact-card
     {
