--- a/Portfolio Website/styles.css
+++ b/Portfolio Website/styles.css
@@ -5,7 +5,6 @@
   padding: 0;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
-  overflow-x: hidden;
 }
 
 ::-moz-selection {
@@ -514,7 +513,7 @@ input:checked + .slider:before {
 
 h1 {
   font-size: 40px;
-  font-weight: 550;
+  font-weight: 500;
   width: 100%;
 }
 
@@ -533,6 +532,7 @@ h1 {
   height: 120vh;
   padding-bottom: 2em;
   overflow-y: hidden;
+  overflow-x: hidden;
 }
 
 #about-text {
@@ -695,6 +695,7 @@ h1 {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  height: 100vh;
   -webkit-box-orient: horizontal;
   -webkit-box-direction: normal;
       -ms-flex-direction: row;
@@ -762,6 +763,14 @@ h4 i {
 
 .proj-demo {
   width: 100%;
+}
+
+.proj-number {
+  font-size: 25em;
+  position: absolute;
+  top: 0;
+  color: rgba(141, 141, 141, 0.6);
+  opacity: 0.2;
 }
 
 .video {
