--- a/Portfolio Website/styles.scss
+++ b/Portfolio Website/styles.scss
@@ -639,6 +639,7 @@ h1
 .project-info
 {
     padding-top: 20px;
+    padding-bottom: 20px;
     text-align: left;
 }
 .built-with
@@ -1168,7 +1169,8 @@ other classes overiding the dark mode declarations due to specificity*/
     }
     .project-info
     {
-        padding-top: 0;
+        padding-top: 10px;
+        padding-bottom: 10px;
     }
     #contact-card
     {
